# Tello_Project

./: .aider.conf.yml  .gitignore  AIDER.md  CLAUDE.md  LICENSE  README.md  environment-sim.yml  launch.command  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/aider-compact/: SKILL.md
.claude/skills/generate_gate/: SKILL.md
.claude/skills/scaffold-here/: SKILL.md
.github/workflows/: tests.yml
docs/: AI_WORKFLOW.md  COMMANDS.md  DECISIONS.md  PROJECT.md  PROJEKTSTAND.md  build_pdf.py  build_pdf.sh  djitellopy_api.txt
examples/: demo.py  ps4_controller.py
scripts/: download_model.py  graphify_benchmark.py  latency_benchmark.py  sim_smoothness_benchmark.py  webcam_check.py
src/tello_control/: __init__.py
src/tello_control/core/: __init__.py  backend.py  constants.py  controller.py  mock_tello.py
src/tello_control/gesture/: __init__.py  app.py  command_map.py  detector.py  runner.py  velocity_map.py
src/tello_control/gesture/models/: .gitkeep
src/tello_control/hardware/: __init__.py  flight_test.py  telemetry.py
src/tello_control/sim/: __init__.py  control_lab.py  demo.py  keyboard_control.py  keyboard_map.py  launcher.py  motion_profile.py  pybullet_backend.py  tuning_panel.py
src/tello_control/voice/: __init__.py  app.py  commands.py  fastpath.py  listener.py  llm_parser.py  stt.py
tests/: test_capture_config.py  test_commands.py  test_energy_segmenter.py  test_gesture_command_map.py  test_keyboard_map.py  test_mock_rc.py  test_mock_tello.py  test_motion_profile.py  test_tuning_panel.py  test_velocity_map.py  test_voice_fastpath.py
